--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Calendar | Home</title>
+    <title>大数据集群批处理周别全时段运行图</title>
     <script src="js/react.min.js"></script>
     <script src="js/JSXTransformer.js"></script>
     <script src="js/eventLayout.js"></script>
   </head>
-  <body>
-    <h1 style="margin-left:5px">大数据集群批处理周别全时段运行图</h1>
-    <div style="width:4500px">
-      <div style="display: inline-block;width:800px;font-size: 17px" align="center">周一</div>
+  <body style="background-color:#ECECEC">
+    <h1 style="margin-left:5px;">大数据集群批处理周别全时段运行图</h1>
+	<br />
+    <div style="width:4500px;">
+      <div style="display: inline-block;width:790px;font-size: 17px" align="center">周一</div>
       <div style="display: inline-block;width:500px;font-size: 17px" align="center">周二</div>
       <div style="display: inline-block;width:700px;font-size: 17px" align="center">周三</div>
       <div style="display: inline-block;width:550px;font-size: 17px" align="center">周四</div>
-      <div style="display: inline-block;width:700px;font-size: 17px" align="center">周五</div>
-      <div style="display: inline-block;width:600px;font-size: 17px" align="center">周六</div>
-      <div style="display: inline-block;width:550px;font-size: 17px" align="center">周日</div>
+      <div style="display: inline-block;width:650px;font-size: 17px" align="center">周五</div>
+      <div style="display: inline-block;width:630px;font-size: 17px" align="center">周六</div>
+      <div style="display: inline-block;width:580px;font-size: 17px" align="center">周日</div>
     </div>
-    <div id="container"></div>
+    <div id="container" ></div>
     <script type="text/jsx">
       // The JSX file can't be loaded by JSXTransformer locally
       // due to browse security, so I have to place it inline this file.
